# ocrd_paddleocr

./: .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  ocrd-tool.json  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
ocrd_paddleocr/: ocrd-tool.json  segment.py
tests/: test_segment.py
