[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "ocrd_paddleocr"
authors = [
    {name = "Dominic Kempf", email = "ssc@uni-heidelberg.de"},
]
description = "Wrapping PaddleOCR for the OCR-D framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ocr", "ocr-d", "paddle-ocr"]
dependencies = [
    "ocrd @ git+https://github.com/dokempf/core.git@pydantic-v2",
    "PaddleOCR[all] >= 3.3"
]
dynamic = ["version"]

# https://pypi.org/classifiers/
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
ocrd-paddleocr-segment = "ocrd_paddleocr.segment:cli"

[project.urls]
Homepage = "https://github.com/ssciwr/ocrd_paddleocr"
Repository = "https://github.com/ssciwr/ocrd_paddleocr.git"

[tool.setuptools]
packages = ["ocrd_paddleocr"]
package-data = {"*" = ["ocrd-tool.json"]}
